# trekking-route-planner

./: README.md  experiment1.py  experiment2.py  main.py  notebook.ipynb  plot.py  pyproject.toml  requirements.txt  results_Jiri Hospital_to_Jiri-02_100hours.csv  results_Jiri Hospital_to_Jiri-02_10hours.csv  results_Jiri Hospital_to_Jiri-02_2hours.csv  results_Jiri Hospital_to_Jiri-02_30hours.csv  results_Jiri Hospital_to_Jiri-02_50days.csv  results_Jiri Hospital_to_Jiri-02_50hours.csv  results_Jiri Hospital_to_Jiri-02_5hours.csv  results_Jiri Hospital_to_Jugal Hima Trek Route_10hours.csv  results_Jiri Hospital_to_Jugal Hima Trek Route_15hours.csv  results_Jiri Hospital_to_Jugal Hima Trek Route_50days.csv  results_Jiri Hospital_to_Jugal Hima Trek Route_50hours.csv  sample.txt  test2.py
dataset/: edges.csv  map.html  nodes.csv  nodes_edges.json
dataset/final/: final.csv  final_elevation.csv  final_elevation_filtered.csv
dataset/processed/: combined_locations.csv  location_info.json  location_results.csv
dataset/raw/: Barhabise to TshoRolpa.json  GairiHanumante to Simigaun.json  Gaurishankar Conservation Area.json  Jiri to Tsho Rolpa.json  Kapthang to Larcha.json
dataset/result/: experiment1_results.csv  (+13 more)
documents/: .~lock.Mid Report.docx#  Gantt Chart.mmd  Group Contract.docx  Idea Report Instructions.docx  Idea Report.docx  Mid Report.docx  Peer Evaluation Form.docx  Presentation Template.pptx  Report Template and Instructions.docx
scripts/: altitude.py  attempt2.py  convert.py  convert_and_fetch.py  convert_and_plot.py  location_merger.py  test.py
(+4 files in other folders)
